# ttok4bedrock

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml
tests/: __init__.py  test_bedrock_counter.py
ttok4bedrock/: __init__.py  bedrock_counter.py  cli.py
walk-the-code/: add_hashes.py  config.json  start.sh
walk-the-code/comments/cli_entry/: cli.json
walk-the-code/comments/core_engine/: bedrock_counter.json
walk-the-code/comments/sdk_api/: __init__.json
walk-the-code/diagrams/: architecture.mmd  token_counting.mmd  truncation.mmd
